# bmvm

./: .gitignore  Cargo.toml  LICENSE  README.md  bench_setup.py  ffi.md  function-signature.md  layout.x  mem_max.sh  microbench.sh  microbuild.sh  mircobuild.sh  norm.py  outline.md  polybench.sh  startup.sh  x86_64-bmvm.ld
.cargo/: config.toml
bench/: setup.py
bench/aes_bmvm/: Cargo.toml
bench/aes_bmvm/.cargo/: config.toml
bench/aes_bmvm/src/: main.rs
bench/aes_wasm/: Cargo.toml
bench/aes_wasm/src/: main.rs
bench/bmvm_echo/: Cargo.toml
bench/bmvm_echo/src/: main.rs
bench/bmvm_guest_noop/: Cargo.toml
bench/bmvm_guest_noop/src/: main.rs
bench/link-bmvm/: Cargo.toml
bench/link-bmvm/src/: main.rs  out.rs
bench/link-wasm/: Cargo.toml
bench/link-wasm/src/: main.rs
bench/micro/: Cargo.toml
bench/micro/src/: main.rs
bench/run_bmvm/: Cargo.toml
bench/run_bmvm/src/: main.rs
bench/run_cwasm/: Cargo.toml
bench/run_cwasm/src/: main.rs
bench/run_wasm/: Cargo.toml
bench/run_wasm/src/: main.rs
bench/setup-linking/bmvm_guest_expose/: Cargo.toml
bench/setup-linking/bmvm_host_expose/: Cargo.toml
bench/setup-noop/bmvm_guest_noop/: Cargo.toml
bench/setup-noop/bmvm_host_setup/: Cargo.toml
bench/setup-noop/wasmtime_setup_noop/: Cargo.toml  noop.wat
bench/wasm_echo/: Cargo.toml
bench/wasm_echo/src/: main.rs
benchmarks/bmvm/2mm/: raw.csv
benchmarks/bmvm/3mm/: raw.csv
benchmarks/bmvm/adi/: raw.csv
benchmarks/bmvm/atax/: raw.csv
benchmarks/bmvm/correlation/: summary.json
benchmarks/bmvm/covariance/: raw.csv
benchmarks/bmvm/doitgen/: raw.csv  summary.json
benchmarks/bmvm/durbin/: raw.csv
benchmarks/bmvm/fdtd_2d/: raw.csv  summary.json
benchmarks/bmvm/floyd_warshall/: raw.csv  summary.json
benchmarks/bmvm/gramschmidt/: raw.csv
benchmarks/bmvm/heat_3d/: raw.csv  summary.json
benchmarks/bmvm/jacobi_2d/: summary.json
benchmarks/bmvm/lu/: raw.csv  summary.json
benchmarks/bmvm/ludcmp/: raw.csv
benchmarks/bmvm/nussinov/: raw.csv  summary.json
benchmarks/bmvm/seidel_2d/: summary.json
benchmarks/bmvm/symm/: raw.csv
benchmarks/bmvm/syr2k/: raw.csv
benchmarks/bmvm/trisolv/: raw.csv  summary.json
benchmarks/bmvm/trmm/: raw.csv  summary.json
benchmarks/native/adi/: raw.csv  summary.json
benchmarks/native/atax/: raw.csv
benchmarks/native/cholesky/: summary.json
benchmarks/native/correlation/: raw.csv
benchmarks/native/covariance/: summary.json
benchmarks/native/deriche/: raw.csv  summary.json
benchmarks/native/doitgen/: raw.csv  summary.json
benchmarks/native/fdtd_2d/: raw.csv  summary.json
benchmarks/native/gemm/: raw.csv
benchmarks/native/gramschmidt/: raw.csv  summary.json
benchmarks/native/heat_3d/: raw.csv
benchmarks/native/jacobi_1d/: raw.csv
benchmarks/native/jacobi_2d/: raw.csv  summary.json
benchmarks/native/lu/: raw.csv  summary.json
benchmarks/native/ludcmp/: raw.csv  summary.json
benchmarks/native/mvt/: raw.csv  summary.json
benchmarks/native/symm/: raw.csv
benchmarks/native/syrk/: raw.csv
benchmarks/native/trmm/: summary.json
benchmarks/wasm/adi/: raw.csv  summary.json
benchmarks/wasm/atax/: summary.json
benchmarks/wasm/bicg/: raw.csv
benchmarks/wasm/cholesky/: raw.csv
benchmarks/wasm/covariance/: raw.csv  summary.json
benchmarks/wasm/deriche/: raw.csv  summary.json
benchmarks/wasm/doitgen/: raw.csv  summary.json
benchmarks/wasm/durbin/: summary.json
benchmarks/wasm/floyd_warshall/: raw.csv
benchmarks/wasm/gemm/: raw.csv  summary.json
benchmarks/wasm/gramschmidt/: summary.json
benchmarks/wasm/lu/: raw.csv  summary.json
benchmarks/wasm/mvt/: raw.csv
benchmarks/wasm/nussinov/: raw.csv  summary.json
benchmarks/wasm/seidel_2d/: raw.csv  summary.json
benchmarks/wasm/symm/: raw.csv
benchmarks/wasm/syrk/: summary.json
benchmarks/wasm/trisolv/: summary.json
bmvm_common/: Cargo.toml
bmvm_common/src/: cpuid.rs  error.rs  hash.rs  interprete.rs  lib.rs  meta.rs  registry.rs  typehash.rs  typesignature.rs
bmvm_common/src/mem/: addr.rs  align.rs  alloc.rs  bits.rs  layout.rs  mod.rs
bmvm_common/src/vmi/: meta.rs  mod.rs  transport.rs
bmvm_guest/: Cargo.toml  build.rs
bmvm_guest/link/: layout.x  linkall.x  meta.x
bmvm_guest/src/: alloc.rs  boot.asm  host_calls.rs  hypercall.rs  lib.rs  panic.rs  setup.rs
bmvm_guest/src/setup/: gdt.rs  idt.rs  mod.rs  paging.rs
bmvm_guest/src/vmi/: hypercall.rs  mod.rs  upcall.rs
bmvm_host/: Cargo.toml
bmvm_host/benches/: echo.rs  startup.rs
bmvm_host/src/: elf.rs  lib.rs  linker.rs  runtime.rs  setup.rs  utils.rs
bmvm_host/src/alloc/: alloc.rs  mod.rs  perm.rs  region.rs
bmvm_host/src/elf/: mod.rs
bmvm_host/src/linker/: config.rs  hypercall.rs  linker.rs  mod.rs  registry.rs  upcall.rs
bmvm_host/src/vm/: config.rs  gdb.rs  mod.rs  paging.rs  registry.rs  setup.rs  utils.rs  vcpu.rs  vm.rs
bmvm_macros/: Cargo.toml
bmvm_macros/src/: common.rs  lib.rs  typehash.rs  util.rs
bmvm_macros/src/guest/: entry.rs  guest.rs  guest2host.rs  host2guest.rs  hypercall.rs  mod.rs  util.rs
bmvm_macros/src/host/: mod.rs
data/criterion/report/: index.html
examples/cpuid/: Cargo.toml
examples/cpuid-host/: Cargo.toml
examples/ctx/: Cargo.toml
examples/guest/: Cargo.toml
examples/host/: Cargo.toml  out.rs
examples/host-bench/: Cargo.toml
examples/host-cpuid/: Cargo.toml
examples/host-expand/: Cargo.toml
examples/longmode/: Cargo.toml
examples/wasm/: Cargo.toml
kvm_guest/: Cargo.toml  build.rs
kvm_guest/link/: meta.x
kvm_guest/src/: lib.rs
kvm_guest_sample/: Cargo.toml
kvm_guest_sample/.cargo/: config.toml
kvm_guest_sample/src/: main.rs
kvm_host/: Cargo.toml
kvm_host/src/: alloc.rs  lib.rs
kvm_macros/: Cargo.toml
kvm_macros/src/: host.rs  lib.rs
tooling/: align.py  pageviz.py
tooling/benchy/: Cargo.toml
tooling/benchy/src/: eval.rs  exec.rs  main.rs
tooling/benchy/src/bench/: exec.rs  mod.rs  partial.rs  startup.rs
tooling/fmtns/: Cargo.toml
tooling/plotty/: Cargo.toml
tooling/printlayout/: Cargo.toml
tooling/vmi-inspect/: Cargo.toml
(+761 files in other folders)
