[workspace]
resolver = "3"
members = [
    # Core Components
    "bmvm_guest",
    "bmvm_common",
    "bmvm_macros",
    "bmvm_host",
    # Examples
    "examples/guest",
    "examples/host",
    "examples/host-bench",
    "examples/wasm",
    "examples/ctx",
    # Tooling
    "tooling/printlayout",
    "tooling/vmi-inspect",
    "tooling/benchy",
    "tooling/fmtns",
    "tooling/plotty",
    # Benchmarks
    "bench/bmvm_echo",
    "bench/wasm_echo",
    "bench/aes_bmvm",
    "bench/aes_wasm",
    "bench/link-bmvm",
    "bench/link-wasm",
    "bench/micro",
    "bench/run_wasm",
    "bench/run_cwasm",
    "bench/run_bmvm",
]
