[workspace]
resolver = "3"
members = [
    # Core Components
    "bmvm_guest",
    "bmvm_common",
    "bmvm_macros",
    "bmvm_host",
    # Examples
    "examples/guest",
    "examples/host",
    "examples/host-bench",
    "examples/wasm",
    # Debug Tooling
    "tooling/printlayout",
    "tooling/vmi-inspect",
    "tooling/benchy",
    "tooling/fmtns",
    "tooling/plotty",
    # Benchmark Guests
    "bench/bmvm_echo",
    "bench/wasm_echo",
]
