[package]
name = "bmvm-guest"
version = "0.1.0"
edition = "2024"

[features]
setup = []
vmi-debug = ["bmvm-macros/vmi-debug", "bmvm-common/vmi-debug"]
vmi-no-debug = ["bmvm-macros/vmi-no-debug", "bmvm-common/vmi-no-debug"]

[dependencies]
bmvm-macros = { path = "../bmvm_macros", default-features = false, features = ["guest"] }
bmvm-common = { path = "../bmvm_common", default-features = false, features = ["vmi-execute"]}
