[package]
name = "bmvm-host"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.30.1", features = ["mman"] }
goblin = "0.10.0"
kvm-ioctls = "0.22.0"
kvm-bindings = "0.12.0"
sealed = "0.6.0"
thiserror = "2.0.12"
inventory = "0.3.20"

bmvm-common = {path = "../bmvm_common", features = ["std", "vmi-consume"]}
bmvm-macros = { path = "../bmvm_macros", default-features = false, features = ["guest", "vmi-consume"] }

log = "0.4.27"
