[package]
name = "bmvm-macros"
version = "0.1.0"
edition = "2024"

[features]
guest = []
host = []
vmi-debug = ["bmvm-common/vmi-debug"]
vmi-no-debug = ["bmvm-common/vmi-no-debug"]
vmi-consume = ["bmvm-common/vmi-consume"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3.3.0"
bmvm-common = { path = "../bmvm_common", features = ["vmi-macro"]}
