cargo-features = ["per-package-target"]

[package]
name = "aes-bmvm"
version = "0.1.0"
edition = "2024"


[dependencies]
bmvm-guest = { path = "../../bmvm_guest" }
aes-gcm = { version = "0.11.0-rc.1", default-features = false, features = ["aes"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
