cargo-features = ["per-package-target"]

[package]
name = "aes-wasm"
version = "0.1.0"
edition = "2024"
forced-target = "wasm32-unknown-unknown"

[dependencies]
aes-gcm = { version = "=0.11.0-rc.1", default-features = false, features = ["aes"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
