cargo-features = ["per-package-target"]

[package]
name = "link-bmvm"
version = "0.1.0"
edition = "2024"
forced-target = "x86_64-unknown-none"


[features]
links1 = []
links8 = []
links16 = []
links32 = []
links64 = []
links128 = []

[dependencies]
seq-macro = "0.3.6"
bmvm-guest = {path="../../bmvm_guest"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
