cargo-features = ["per-package-target"]

[package]
name = "link-wasm"
version = "0.1.0"
edition = "2024"
forced-target = "wasm32-unknown-unknown"


[features]
links1 = []
links8 = []
links16 = []
links32 = []
links64 = []
links128 = []

[dependencies]
seq-macro = "0.3.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
