[package]
name = "benchy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
indicatif = "0.18.0"
wasmtime = "36.0.2"
bmvm-host = {path = "../../bmvm_host", features = ["benchmarks"]}