[package]
name = "benchy"
version = "0.1.0"
edition = "2024"

[features]
links1 = []
links8 = []
links16 = []
links32 = []
links64 = []
links128 = []

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
indicatif = "0.18.0"
wasmtime = "36.0.2"
bmvm-host = {path = "../../bmvm_host"}
seq-macro = "0.3.6"
loop-code = "0.5.2"
inventory = "0.3.21"
const_format = "0.2.34"
kvm-ioctls = "0.24.0"
kvm-bindings = "0.14.0"
libc = "0.2.175"
